public/css/style.css
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  background-color: #eeeeee;
}

div#header {
  min-height: 4em;
  width: 100%;
  position: fixed;
  z-index: 10;
  background: #7abcff; /* Old browsers */
  background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
  background: linear-gradient(to bottom, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
  border-bottom: 1px solid #888888;
}

textarea#postentry {
  margin: 1.1em 0 1em 1em;
  padding: 0.3em 0.3em 0.2em 0.3em;
  width: 70%;
  font-size: 1em;
  height: 1.5em;
  background-color: white;
  border: 1px solid #6666ff;
  border-right: none;
  border-radius: 0;
  -webkit-appearance: none;
  -webkit-border-top-left-radius: 5px;
  -webkit-border-bottom-left-radius: 5px;
  -moz-border-radius-topleft: 5px;
  -moz-border-radius-bottomleft: 5px;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}

span#postbutton {
  margin: 1.1em 0 1em -5px;
  padding: 0 1em;
  display:inline-block;
  font-size: 1em;
  line-height: 2em;
  background: #5b5b5b;
  background: -moz-linear-gradient(top, #5b5b5b 0%, #070707 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5b5b5b), color-stop(100%,#070707));
  background: -webkit-linear-gradient(top, #5b5b5b 0%,#070707 100%);
  background: -o-linear-gradient(top, #5b5b5b 0%,#070707 100%);
  background: -ms-linear-gradient(top, #5b5b5b 0%,#070707 100%);
  background: linear-gradient(to bottom, #5b5b5b 0%,#070707 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5b5b', endColorstr='#070707',GradientType=0 );
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  color: white;
  cursor:default;
}

span#postbuttondropdown {
  margin: 1.1em 1em 1em -5px;
  padding: 0 0.3em;
  display:inline-block;
  font-size: 1em;
  line-height: 2em;
  background: #5b5b5b;
  background: -moz-linear-gradient(top, #5b5b5b 0%, #070707 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5b5b5b), color-stop(100%,#070707));
  background: -webkit-linear-gradient(top, #5b5b5b 0%,#070707 100%);
  background: -o-linear-gradient(top, #5b5b5b 0%,#070707 100%);
  background: -ms-linear-gradient(top, #5b5b5b 0%,#070707 100%);
  background: linear-gradient(to bottom, #5b5b5b 0%,#070707 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5b5b', endColorstr='#070707',GradientType=0 );
  border: 1px solid black;
  -webkit-border-top-right-radius: 5px;
  -webkit-border-bottom-right-radius: 5px;
  -moz-border-radius-topright: 5px;
  -moz-border-radius-bottomright: 5px;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  color: white;
  cursor:default;
}

div#accountselector {
  padding: 0 1em;
  margin: 0;
}

div#accountselector ul {
  list-style-type: none;
}

div#columns {
  position: relative;
  top: 4em;
  overflow-x: auto;
}

div.column {
  float: left;
  display: inline-block;
  vertical-align:top;
  overflow: hidden;
  min-width: 300px;
  margin: 0;
  padding: 0.5em;
}

h4.columnheading {
  margin: 0.5em 0;
  font-weight: 100;
  font-size: 1.2em;
}

div.item {
  margin-bottom: 0.5em;
  padding: 0;
  background-color: white;
  border: 1px solid #cccccc;
  font-weight: 100;
}

div.item-text {
  padding: 0.5em;
  overflow: hidden;
  color: #333333;
}

div.item-text a {
  color: #4096ee;
  text-decoration: none;
}

div.item-mediapreview {
  margin: 0.5em 0 0 0;
  max-width: 100%;
}

div.item-mediapreview a img {
  max-width: 100%;
}

div.item-fromuser {
  margin: 0;
  padding: 0.5em;
  font-size: 0.6em;
  background-color: #f8f8f8;
  color: #666666;
}

div.item-fromuser-twitter {
  background-color: #d1f4ff;
  color: #333333;
}

div.item-fromuser-facebook {
  background-color: #dfe3ee;
  color: #333333;
}

img.item-fromuseravatar {
  float: left;
  margin-right: 0.5em;
}

div#errorbox {
  position: fixed;
  top: 1em;
  right: 1em;
  z-index: 20;
  padding: 0.25em;
  background: #ffbbbb;
  color: black;
  border: 1px solid #ff0000;
  display: none;
}

div.clear {
  clear:both;
}

